fixes #16 - Fixed gauge text not vertical aligned in Firefox

--- a/src/components/gauge/circle.sass
+++ b/src/components/gauge/circle.sass
@@ -6,32 +6,28 @@
       .dial
         stroke: $is-success
         stroke: $is-success
-      // .value-text
-      //   fill: $is-success
+
   &.is-danger
     .gauge
       .value,
       .dial
         stroke: $is-danger
         stroke: $is-danger
-      // .value-text
-      //   fill: $is-danger
+
   &.is-warning
     .gauge
       .value,
       .dial
         stroke: $is-warning
         stroke: $is-warning
-      // .value-text
-      //   fill: $is-warning
+
   &.is-info
     .gauge
       .value,
       .dial
         stroke: $is-info
         stroke: $is-info
-      // .value-text
-      //   fill: $is-info
+
   .gauge
     .dial
       stroke: $black-ter
@@ -45,4 +41,5 @@
       font-size: $size-3
       letter-spacing: -.3rem
       alignment-baseline: middle
+      dominant-baseline: central
       fill: $white
